fix bug: overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
 body {
-  /* background-color: #D5D2EA; */
-  /* background-color: #12072Cff; */
   position: relative;
+  width: 100%;
   overflow-x: hidden;
 }
 
